--- a/material.ipynb
+++ b/material.ipynb
@@ -96,6 +96,41 @@
     "point.reset()\n",
     "print(point.x, point.y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point:\n",
+    "    definition: str = \"Entidad geometrica abstracta que representa una ubicación en un espacio.\"\n",
+    "    def __init__(self, x: float=0, y: float=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    def move(self, new_x: float, new_y: float):\n",
+    "        self.x = new_x\n",
+    "        self.y = new_y\n",
+    "    def reset(self):\n",
+    "        self.x = 0\n",
+    "        self.y = 0\n",
+    "    def compute_distance(self, point)-> float:\n",
+    "        distance = ((self.x - point.x)**2+(self.y - point.y)**2)**(0.5)\n",
+    "        return distance\n",
+    "\n",
+    "first_point = Point(x=1, y=1)\n",
+    "second_point = Point(x=2, y=2)\n",
+    "# should be root of 2 (?)\n",
+    "print(first_point.compute_distance(second_point))"
+   ]
   }
  ],
  "metadata": {
